Archive2/42/0b0b331ea6c6af/output
main.cpp: In function 'int main()':
main.cpp:7:13: error: 'is_same_t' is not a member of 'std'
    auto x = std::is_same_t<int, int>();
             ^
main.cpp:7:28: error: expected primary-expression before 'int'
    auto x = std::is_same_t<int, int>();
                            ^
